--- a/desayunos-arkus/src/index.html
+++ b/desayunos-arkus/src/index.html
@@ -8,6 +8,16 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
-  <app-root></app-root>
+  <app-root>
+  </app-root>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/evo-calendar@1.1.2/evo-calendar/js/evo-calendar.min.js"></script>
+    <script>
+      // initialize your calendar, once the page's DOM is ready
+      $(document).ready(function($) {
+          $('#calendar').evoCalendar({
+          })
+      })
+      </script>
 </body>
 </html>
