--- a/desayunos-arkus/src/index.html
+++ b/desayunos-arkus/src/index.html
@@ -8,34 +8,25 @@
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      rel="stylesheet"
-      href="https://fonts.googleapis.com/css2?family=Roboto&display=swap"
-    />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" />
   </head>
   <body>
-    <app-root> </app-root>
+    <app-root></app-root>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/evo-calendar@1.1.2/evo-calendar/js/evo-calendar.min.js"></script>
+    <script src="./assets/evo-calendar.js"></script>
     <script>
       // initialize your calendar, once the page's DOM is ready
       $(document).ready(function ($) {
         $("#calendar").evoCalendar({
-          theme: "Orange Coral",
           firstDayOfWeek: 1,
           language: "es",
-          todayHighlight: true,
-          // sidebarDisplayDefault: false,
-          // sidebarToggler: false,
-
           calendarEvents: [
             {
-              id: 'bHay68s', // Event's ID (required)
+              id: "bHay68s", // Event's ID (required)
               name: "Ivan Garcia", // Event name (required)
               date: "October/26/2021", // Event date (required)
               type: "holiday", // Event type 'birthday, event, holiday' (required)
-              description: "Aqui puede ir el puesto del empleado"
-            }
+            },
           ],
         });
       });
